--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@
 html, body {
     width: 100%;
     height: 100%;
+    margin: 0;
+    background-color: red;
 }
 
 nav {
     width: 100%;
-    height: 25px;
-    border-bottom: solid;
+    height: 39px;
+    border-bottom: solid 1px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: Poppins;
-    padding: 0 10px 0 10px;
+    position: fixed;
+    z-index: 3;
+    background-color: white;
+    top: 0;
 }
 
 a {
@@ -24,13 +29,24 @@ a {
 .pages {
     display: flex;
     gap: 15px;
+    padding-right: 10px;
+}
+
+.logo {
+    padding-left: 10px;
 }
     
 .logo img {
     width: 100px;
 }
 
-
+.heroSection {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-image: url("/images/greenhouseMain.avif");
+    border: solid;
+}
 
 
 
