--- a/style.css
+++ b/style.css
@@ -4,12 +4,11 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: red;
 }
 
 nav {
     width: 100%;
-    height: 39px;
+    height: 45px;
     border-bottom: solid 1px;
     display: flex;
     align-items: center;
@@ -19,6 +18,11 @@ nav {
     z-index: 3;
     background-color: white;
     top: 0;
+    backdrop-filter: blur;
+    background: rgba( 255, 255, 255, 0.6 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
 }
 
 a {
@@ -46,13 +50,124 @@ a {
     background-size: cover;
     background-image: url("/images/greenhouseMain.avif");
     border: solid;
+    display: flex;
+    align-items: flex-end;
+}
+
+nav a {
+    padding: 5px;
+}
+
+nav a:nth-child(3) {
+    color: green;
+    border: solid 1px;
+    padding: 4px;
+    border-radius: 15px;
+    transition: 0.3s;
+}
+
+nav a:nth-child(3):hover {
+    background-color: green;
+    color: white;
+}
+
+nav a:hover {
+    color: green;
+}
+
+.info {
+    background-color: #283618;
+    border-radius: 20px;
+    position: relative;
+    bottom: 50px;
+    left: 20px;
+    padding: 20px;
+    font-family: Merriweather;
+    color: white;
+}
+
+.info button {
+    background: transparent;
+    border: solid 1px;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
+    color: #FEFAE0;
+    transition: 0.3s;
+}
+
+.info button:hover {
+    background-color: #FEFAE0;
+    color: #283618;
+}
+
+.plantsSection {
+    background-color: #FEFAE0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+.plantsSection h1 {
+    position: relative;
+    top: 60px;
+    font-family: Merriweather;
+    font-size: 3.5rem;
+}
+
+.plantGrid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    position: relative;
+    top: 80px;
+    row-gap: 50px;
+    place-items: center;
+}
+
+.plant {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
 }
 
 
+.plantImg {
+    border: solid;
+    background-color: red;
+    height: 400px;
+    border-radius: 20px;
+}
 
+.plantName {
+    font-size: 1.2rem;
+}
 
+.plantImg {
+    background-image: url("/images/capellaCoralPetunia.jpg");
+    background-size: cover ;
+}
 
+.plant {
+    font-family: Merriweather;
+}
 
+.plantInfo {
+    font-style: italic;
+}
+
+.plantImg, .plantInfo, .plantName {
+    width: 250px;
+}
+
+.plantInfo, .plantName {
+    margin: 0;
+}
+
+.plant .plantImg:nth-child(2) {
+    background-image: url("/images/capellaCoralPetunia.jpg");
+}
 
 
 
