--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --cornsilk: #FEFAE0;
+    --earth-yellow: #DDA15E;
+    --tigers-eye: #BC6C25;
+    --dark-moss-green: #606C38;
+    --pakistan-green: #283618;
+}
+
+
 html, body {
     width: 100%;
     height: 100%;
@@ -8,7 +17,7 @@ html, body {
 
 nav {
     width: 100%;
-    height: 45px;
+    height: 50px;
     border-bottom: solid 1px;
     display: flex;
     align-items: center;
@@ -20,9 +29,19 @@ nav {
     top: 0;
     backdrop-filter: blur;
     background: rgba( 255, 255, 255, 0.6 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    gap: 10px;
+}
+
+ nav .logo img {
+    width: 40px;
 }
 
 a {
@@ -84,6 +103,7 @@ nav a:hover {
     padding: 20px;
     font-family: Merriweather;
     color: white;
+    width: 500px;
 }
 
 .info button {
@@ -92,17 +112,17 @@ nav a:hover {
     border-radius: 20px;
     padding: 10px;
     cursor: pointer;
-    color: #FEFAE0;
+    color: var(--cornsilk);
     transition: 0.3s;
 }
 
 .info button:hover {
-    background-color: #FEFAE0;
+    background-color: var(--cornsilk);
     color: #283618;
 }
 
 .plantsSection {
-    background-color: #FEFAE0;
+    background-color: var(--cornsilk);
     height: 100%;
     width: 100%;
     text-align: center;
@@ -130,14 +150,20 @@ nav a:hover {
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    transition: 300ms;
+    cursor: pointer;
 }
 
+.plant:hover {
+    background-color: var(--earth-yellow);
+}
 
 .plantImg {
-    border: solid;
     background-color: red;
     height: 400px;
-    border-radius: 20px;
+
 }
 
 .plantName {
