--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ a {
     height: 100vh;
     background-size: cover;
     background-image: url("/images/greenhouseMain.avif");
-    border: solid;
     display: flex;
     align-items: flex-end;
 }
@@ -161,7 +160,7 @@ nav a:hover {
 }
 
 .plantImg {
-    background-color: red;
+    background-color: var(--pakistan-green);
     height: 400px;
 
 }
