--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    background-color: var(--cornsilk);
 }
 
 nav {
@@ -91,6 +92,23 @@ nav a:nth-child(3):hover {
 
 nav a:hover {
     color: green;
+}
+
+@media (max-width: 600px) {
+    nav p {
+        display: none;
+    }
+
+    nav {
+        font-size: 0.9rem;
+    }
+    .info  {
+        width: 400px;
+        padding: 0;
+        text-align: center;
+        margin: 0;
+        background-color: red;
+    }
 }
 
 .info {
