--- a/style.css
+++ b/style.css
@@ -246,10 +246,48 @@ nav a:hover {
 }
 
 
+footer {
+    background-color: #2F2D2D;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: Merriweather;
+    height: 220px;
+}
 
+.MTLogo img {
+    width: 180px;
+}
 
+footer ul {
+    list-style: none;
+}
 
+footer ul li:nth-child(1) {
+    font-size: 1.4rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
 
+footer li:not(li:nth-child(1)) {
+    cursor: pointer;
+}
+
+@media (max-width: 800px) {
+    
+    footer {
+        font-size: 0.8rem;
+    }
+
+    footer ul li:nth-child(1) {
+        font-size: 1.2rem;
+    }
+
+    .MTLogo img {
+        width: 120px;
+    }
+}
 
 
 
