--- a/style.css
+++ b/style.css
@@ -249,14 +249,35 @@ nav a:hover {
     background-color: #f1f1f1;
     font-family: Merriweather;
     margin: 25px 10px 50px 50px;
-    border-radius:3%;
-    width:30%;
+    border-radius:15px;
+    width:60%;
     height:30%;
-    padding: 2%
+    padding: 2%;
+}
+
+.masonryImageContainer {
+    background-color: #d7d7d7;
+    display:flex;
+    width:50%;
+    height:100%;
+    border-radius:50px;
+}
+.masonryImage {
+    object-fit:cover;
+    width: 90%;
+    padding: 5% 5% 5%;
+    line-height:100%;
+    border-radius: 50px;
 }
 
 
-
+h1 {
+    font-family: Merriweather;
+    font-size:2.5em;
+    padding: 10%;
+    margin: auto;
+    text-align: center;
+}
 
 
 
