--- a/nav.css
+++ b/nav.css
@@ -45,3 +45,37 @@ a {
 .logo img {
     width: 100px;
 }
+
+
+nav a {
+    padding: 5px;
+}
+
+nav a:nth-child(3) {
+    color: green;
+    border: solid 1px;
+    padding: 4px;
+    border-radius: 15px;
+    transition: 0.3s;
+}
+
+nav a:nth-child(3):hover {
+    background-color: green;
+    color: white;
+}
+
+nav a:hover {
+    color: green;
+}
+
+
+@media (max-width: 600px) {
+    .logo p {
+        display: none;
+    }
+
+    nav {
+        font-size: 0.9rem;
+    }
+}
+
