--- a/footer.css
+++ b/footer.css
@@ -3,11 +3,10 @@ footer {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     font-family: Merriweather;
     width: 100%;
-    height: 130px;
-    padding: 2%;
+    height: 180px;
 }
 
 .MTLogo img {
@@ -63,5 +62,24 @@ footer li:hover:not(li:nth-child(1)) {
 
     .MTLogo img {
         width: 80px;
+    }
+}
+
+@media (max-width: 500px) {
+    footer {
+        font-size: 0.4rem;
+        height: 120px;
+    }
+
+    footer ul:nth-child(1) {
+        margin-block: 0;
+    }
+
+    footer ul li:nth-child(1) {
+        font-size: 0.6rem;
+    }
+
+    .MTLogo img {
+        width: 50px;
     }
 }
