--- a/style.css
+++ b/style.css
@@ -190,8 +190,12 @@ a {
     background-image: url("/images/capellaCoralPetunia.jpg");
 }
 
+.plant:nth-child(1):hover .plantImg {
+    background-image: url("/images/closeUpCapellaCoralPetunia.jpg");
+}
+
 .plant:nth-child(2) .plantImg {
-    background-image: url("/images/yellowCalibrachoa.jpg");
+    background-image: url("/images/yellowAndPurpleCalibroca.jpg");
 }
 
 
@@ -200,20 +204,24 @@ a {
 }
 
 .plant:nth-child(4) .plantImg {
-    background-image: url("/images/calibrachoaWhite.jpg");
+    background-image: url("/images/whiteCalibroca.jpg");
 }
 
 .plant:nth-child(5) .plantImg {
     background-image: url("/images/colues.jfif");
 }
 .plant:nth-child(6) .plantImg {
-    background-image: url("/images/cuphea_hummingbirds_lunch.webp");
+    background-image: url("/images/cuphea.jpg");
 }
 .plant:nth-child(7) .plantImg {
-    background-image: url("/images/Amore-Heart-and-Soul-Danziger-1.jpg");
+    background-image: url("/images/amore.jpg");
 }
 .plant:nth-child(8) .plantImg {
-    background-image: url("/images/Fuchsia-Blue-Eyes-Web-4.jpg");
+    background-image: url("/images/fuchisa.jpg");
+}
+
+ .starlight .plantImg {
+    background-image: url("/images/starlightSunbrightFlower.jpg"); 
 }
 
 
