created mobile nav

--- a/shopplants.css
+++ b/shopplants.css
@@ -106,6 +106,7 @@ html, body {
 .plant:nth-child(8) .plantImg {
     background-image: url("/images/fuchisa.jpg");
 }
+Connect With Us
 
 .plant:nth-child(9) .plantImg {
     background-image: url("/images/starlightSunbrightFlower.jpg");
