--- a/style.css
+++ b/style.css
@@ -64,6 +64,44 @@ a {
     width: 100px;
 }
 
+.menuIcon {
+    width: 30px;
+    margin-right: 15px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobileNav {
+    width: 100%;
+    height: 200px;
+    position: fixed;
+    z-index: 4;
+    background-color: red;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    gap: 15px;
+    background-color: white;
+    backdrop-filter: blur;
+    background: rgba( 255, 255, 255, 0.6 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    justify-content: center;
+    display: none;
+}
+
+.revealNav {
+    display: flex;
+}
+
+.mobileNav a {
+    border-bottom: solid 1px;
+    width: 95%;
+    margin: 0;
+    padding: 0;
+}
+
 .heroSection {
     width: 100%;
     height: 100vh;
@@ -99,6 +137,14 @@ a {
         margin: 0;
         padding: 10px;
         margin-right: 34px;
+    }
+
+    nav .pages {
+        display: none;
+    }
+
+    .menuIcon {
+        display: block;
     }
 }
 
