--- a/nav.css
+++ b/nav.css
@@ -25,7 +25,45 @@ nav {
     background: rgba( 255, 255, 255, 0.6 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
-} 
+}
+
+.menuIcon {
+    display: none;
+    width: 30px;
+    margin-right: 10px;
+}
+
+
+.mobileNav {
+    width: 100%;
+    height: 200px;
+    position: fixed;
+    z-index: 4;
+    background-color: red;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    gap: 15px;
+    background-color: white;
+    backdrop-filter: blur;
+    background: rgba( 255, 255, 255, 0.6 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    justify-content: center;
+    display: none;
+}
+
+.revealNav {
+    display: flex;
+}
+
+.mobileNav a {
+    border-bottom: solid 1px;
+    width: 95%;
+    margin: 0;
+    padding: 0;
+}
 
 .logo {
     display: flex;
@@ -88,5 +126,14 @@ nav a:hover {
     nav {
         font-size: 0.9rem;
     }
+
+    nav .pages {
+        display: none;
+    }
+
+    .menuIcon {
+        display: block;
+    }
 }
+
 
