--- a/masonry.css
+++ b/masonry.css
@@ -228,7 +228,8 @@ footer {
     justify-content: space-evenly;
     font-family: Merriweather;
     height:30%;
-
+    bottom:-55px;
+    position:relative;
 }
 
 .masonryImageContainer {
