--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a {
     width: 100%;
     height: 100vh;
     background-size: cover;
-    background-image: url("/images/greenhouseMain.avif");
+    background-image: url("images/greenhouseLandscape.jpg");
     display: flex;
     align-items: flex-end;
 }
