--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@ footer {
     align-items: center;
     justify-content: space-evenly;
     font-family: Merriweather;
+    
     height:30%;
-
 }
 
 .masonryImageContainer {
@@ -302,9 +302,8 @@ h1 {
     font-family: Merriweather;
     font-size:2.5em;
     padding-top: 30px;
-    margin: auto;
-    text-align: center;
-    margin-top:2%;
+    margin: 0;
+    text-align: left;
 }
 
 .masonryProduct {
@@ -317,8 +316,7 @@ h1 {
     margin-top:10px;
     box-sizing:border-box;
     margin-bottom:10px;
-    transition:1s;
-    font-family: Merriweather;
+    
 }
 
 .masonryProducts {
@@ -326,11 +324,6 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(750px , 1fr));   
     margin-bottom: 25px;
-}
-
-.masonryProduct:hover {
-    transition: 1s;
-    background-color:var(--earth-yellow)
 }
 
 .text {
