--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ a {
     font-family: Merriweather;
     color: white;
     width: 500px;
+    max-width: 515px;
 }
 
 @media (max-width: 600px) {
