--- a/footer.css
+++ b/footer.css
@@ -17,6 +17,14 @@ footer ul {
     list-style: none;
 }
 
+ li a {
+    color: white;
+}
+
+li a:hover {
+    color: var(--cornsilk);
+}
+
 footer ul li:nth-child(1) {
     font-size: 1.4rem;
     font-weight: bold;
