--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -46,9 +47,11 @@ main {
 .contact:nth-child(1) {
     animation: moveUp 0.4s ease-out;
 }
+
 .contact:nth-child(2) {
     animation: moveUp 0.5s ease-out;
 }
+
 .contact:nth-child(3) {
     animation: moveUp 0.6s ease-out;
 }
@@ -73,6 +76,7 @@ main {
         transform: translateY(100%);
         opacity: 0;
     }
+
     to {
         transform: translateX(0);
         opacity: 1;
